[gd_scene load_steps=14 format=2]

[ext_resource path="res://TitleScreen/Outrun future.otf" type="DynamicFontData" id=1]
[ext_resource path="res://TitleScreen/Cyberthrone-7nP4.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://DeathScreen.gd" type="Script" id=3]
[ext_resource path="res://Art/DEXTR2DEAD.png" type="Texture" id=4]
[ext_resource path="res://Art/AMBIDEAD.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 40
outline_size = 1
outline_color = Color( 1, 0, 0.984314, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 40
outline_size = 1
outline_color = Color( 0.87451, 0, 1, 1 )
font_data = ExtResource( 1 )

[node name="DeathScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
new_game = "res://SimpleMap.tscn"
main_menu = "res://TitleScreen/TitleScreen.tscn"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 60.0
margin_right = -60.0
margin_bottom = -60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 1160.0
margin_bottom = 468.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 19.0
margin_right = 1141.0
margin_bottom = 468.0
custom_constants/separation = 90

[node name="AMB1sStats" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer"]
margin_right = 192.0
margin_bottom = 468.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/HBoxContainer/AMB1sStats"]
margin_right = 192.0
margin_bottom = 270.0
texture = ExtResource( 5 )

[node name="Stats" type="HBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer/AMB1sStats"]
margin_top = 274.0
margin_right = 192.0
margin_bottom = 321.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer/AMB1sStats/Stats"]
margin_right = 125.0
margin_bottom = 47.0

[node name="Energy" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/AMB1sStats/Stats/Labels"]
margin_right = 125.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 8 )
text = "Energy Orbs"
valign = 1

[node name="Damage" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/AMB1sStats/Stats/Labels"]
margin_top = 33.0
margin_right = 125.0
margin_bottom = 47.0

[node name="Numbers" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer/AMB1sStats/Stats"]
margin_left = 129.0
margin_right = 129.0
margin_bottom = 47.0

[node name="Energy" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/AMB1sStats/Stats/Numbers"]
margin_bottom = 14.0

[node name="Damage" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/AMB1sStats/Stats/Numbers"]
margin_top = 18.0
margin_bottom = 32.0

[node name="TotalStats" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer"]
margin_left = 282.0
margin_right = 840.0
margin_bottom = 468.0
custom_constants/separation = 20
alignment = 1

[node name="YouDied" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/TotalStats"]
modulate = Color( 0.752941, 0, 0, 1 )
margin_right = 558.0
margin_bottom = 180.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 1 )
text = "You Died"
align = 1

[node name="MiddleSection" type="HBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer/TotalStats"]
margin_top = 200.0
margin_right = 558.0
margin_bottom = 318.0
custom_constants/separation = 80
alignment = 1

[node name="Labels" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer/TotalStats/MiddleSection"]
margin_left = 3.0
margin_right = 282.0
margin_bottom = 118.0

[node name="Time" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/TotalStats/MiddleSection/Labels"]
margin_right = 279.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 2 )
text = "You lasted:"
valign = 1

[node name="Rounds" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/TotalStats/MiddleSection/Labels"]
margin_top = 61.0
margin_right = 279.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 3 )
text = "You survived:"
valign = 1

[node name="Stats" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer/TotalStats/MiddleSection"]
margin_left = 362.0
margin_right = 555.0
margin_bottom = 118.0

[node name="Time" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/TotalStats/MiddleSection/Stats"]
margin_right = 193.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 4 )
text = "4 minutes"
align = 2
valign = 1

[node name="Rounds" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/TotalStats/MiddleSection/Stats"]
margin_top = 61.0
margin_right = 193.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 5 )
text = "5 rounds"
align = 2
valign = 1

[node name="TotalStats" type="HBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer/TotalStats"]
margin_top = 338.0
margin_right = 558.0
margin_bottom = 370.0

[node name="Labels" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer/TotalStats/TotalStats"]
margin_bottom = 32.0

[node name="Energy" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/TotalStats/TotalStats/Labels"]
margin_bottom = 14.0

[node name="Damage" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/TotalStats/TotalStats/Labels"]
margin_top = 18.0
margin_bottom = 32.0

[node name="Numbers" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer/TotalStats/TotalStats"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 32.0

[node name="Energy" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/TotalStats/TotalStats/Numbers"]
margin_bottom = 14.0

[node name="Damage" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/TotalStats/TotalStats/Numbers"]
margin_top = 18.0
margin_bottom = 32.0

[node name="Footer" type="HBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer/TotalStats"]
margin_top = 390.0
margin_right = 558.0
margin_bottom = 468.0
custom_constants/separation = 100
alignment = 1

[node name="NewGame" type="Button" parent="MarginContainer/CenterContainer/HBoxContainer/TotalStats/Footer"]
margin_right = 231.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 6 )
text = "New Game"
flat = true

[node name="TitleScreen" type="Button" parent="MarginContainer/CenterContainer/HBoxContainer/TotalStats/Footer"]
margin_left = 331.0
margin_right = 558.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 7 )
text = "Main Menu"
flat = true

[node name="D3X-TRsStats" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer"]
margin_left = 930.0
margin_right = 1122.0
margin_bottom = 468.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/HBoxContainer/D3X-TRsStats"]
margin_right = 192.0
margin_bottom = 192.0
texture = ExtResource( 4 )

[node name="Stats" type="HBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer/D3X-TRsStats"]
margin_top = 196.0
margin_right = 192.0
margin_bottom = 228.0

[node name="Labels" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer/D3X-TRsStats/Stats"]
margin_bottom = 32.0

[node name="Energy" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/D3X-TRsStats/Stats/Labels"]
margin_bottom = 14.0

[node name="Damage" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/D3X-TRsStats/Stats/Labels"]
margin_top = 18.0
margin_bottom = 32.0

[node name="Numbers" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer/D3X-TRsStats/Stats"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 32.0

[node name="Energy" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/D3X-TRsStats/Stats/Numbers"]
margin_bottom = 14.0

[node name="Damage" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/D3X-TRsStats/Stats/Numbers"]
margin_top = 18.0
margin_bottom = 32.0
[connection signal="pressed" from="MarginContainer/CenterContainer/HBoxContainer/TotalStats/Footer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/HBoxContainer/TotalStats/Footer/TitleScreen" to="." method="_on_TitleScreen_pressed"]
